# avr-usb-made-simple

./: .gitignore  CMakeLists.txt  README.md
host/c/: CMakeLists.txt  README.md  flash_led.c  interrupt.c  read_var.c
host/nodejs/: README.md  flash.js  package-lock.json  package.json  read.js
host/python/: README.md  flash_led.py  read_var.py
src/: main.c  tick.c  tick.h  usb.c  usb.h
